--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/dropdown": "^2.1.23",
+    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^11.2.6",
     "jsvectormap": "^1.5.3",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
